compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     nls -> NL
Rule 2     nls -> nls NL
Rule 3     program -> unit_list
Rule 4     unit_list -> unit
Rule 5     unit_list -> unit_list unit
Rule 6     unit -> PROGRAM ID nls decl_list stmt_list END nls
Rule 7     unit -> PROGRAM ID nls decl_list stmt_list END
Rule 8     unit -> SUBROUTINE ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
Rule 9     unit -> SUBROUTINE ID LPAREN param_list RPAREN nls decl_list stmt_list END
Rule 10    unit -> type_spec FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
Rule 11    unit -> type_spec FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END
Rule 12    param_list -> <empty>
Rule 13    param_list -> ID
Rule 14    param_list -> param_list COMMA ID
Rule 15    decl_list -> <empty>
Rule 16    decl_list -> decl_list decl
Rule 17    decl -> type_spec vardecl_list nls
Rule 18    type_spec -> INTEGER
Rule 19    type_spec -> REAL
Rule 20    type_spec -> LOGICAL
Rule 21    type_spec -> CHARACTER
Rule 22    vardecl_list -> vardecl
Rule 23    vardecl_list -> vardecl_list COMMA vardecl
Rule 24    vardecl -> ID
Rule 25    vardecl -> ID LPAREN dim_list RPAREN
Rule 26    dim_list -> INT_LITERAL
Rule 27    dim_list -> dim_list COMMA INT_LITERAL
Rule 28    stmt_list -> <empty>
Rule 29    stmt_list -> stmt_list stmt
Rule 30    stmt -> nls
Rule 31    stmt -> opt_label ID EQUALS expr nls
Rule 32    stmt -> opt_label ID LPAREN expr_list RPAREN EQUALS expr nls
Rule 33    stmt -> opt_label PRINT STAR COMMA expr_list nls
Rule 34    stmt -> opt_label PRINT STAR nls
Rule 35    stmt -> opt_label READ STAR COMMA expr_list nls
Rule 36    stmt -> opt_label IF LPAREN expr RPAREN THEN nls stmt_list ENDIF nls
Rule 37    stmt -> opt_label IF LPAREN expr RPAREN THEN nls stmt_list ELSE nls stmt_list ENDIF nls
Rule 38    stmt -> opt_label IF LPAREN expr RPAREN GOTO INT_LITERAL nls
Rule 39    stmt -> opt_label IF LPAREN expr RPAREN inline_stmt
Rule 40    inline_stmt -> ID EQUALS expr nls
Rule 41    inline_stmt -> GOTO INT_LITERAL nls
Rule 42    inline_stmt -> STOP nls
Rule 43    stmt -> opt_label DO INT_LITERAL ID EQUALS expr COMMA expr nls do_body
Rule 44    stmt -> opt_label DO INT_LITERAL ID EQUALS expr COMMA expr COMMA expr nls do_body
Rule 45    do_body -> stmt_list INT_LITERAL CONTINUE nls
Rule 46    stmt -> opt_label GOTO INT_LITERAL nls
Rule 47    stmt -> opt_label CONTINUE nls
Rule 48    stmt -> opt_label RETURN nls
Rule 49    stmt -> opt_label STOP nls
Rule 50    stmt -> opt_label CALL ID LPAREN expr_list RPAREN nls
Rule 51    stmt -> opt_label CALL ID nls
Rule 52    opt_label -> <empty>
Rule 53    opt_label -> INT_LITERAL
Rule 54    expr_list -> expr
Rule 55    expr_list -> expr_list COMMA expr
Rule 56    expr -> expr PLUS expr
Rule 57    expr -> expr MINUS expr
Rule 58    expr -> expr STAR expr
Rule 59    expr -> expr SLASH expr
Rule 60    expr -> expr POWER expr
Rule 61    expr -> expr EQ expr
Rule 62    expr -> expr NE expr
Rule 63    expr -> expr LT expr
Rule 64    expr -> expr LE expr
Rule 65    expr -> expr GT expr
Rule 66    expr -> expr GE expr
Rule 67    expr -> expr AND expr
Rule 68    expr -> expr OR expr
Rule 69    expr -> MINUS expr
Rule 70    expr -> NOT expr
Rule 71    expr -> LPAREN expr RPAREN
Rule 72    expr -> INT_LITERAL
Rule 73    expr -> REAL_LITERAL
Rule 74    expr -> TRUE
Rule 75    expr -> FALSE
Rule 76    expr -> STRING_LITERAL
Rule 77    expr -> ID LPAREN expr_list RPAREN
Rule 78    expr -> ID

Terminals, with rules where they appear

AND                  : 67
CALL                 : 50 51
CHARACTER            : 21
COMMA                : 14 23 27 33 35 43 44 44 55
CONTINUE             : 45 47
DO                   : 43 44
ELSE                 : 37
END                  : 6 7 8 9 10 11
ENDIF                : 36 37
EQ                   : 61
EQUALS               : 31 32 40 43 44
FALSE                : 75
FUNCTION             : 10 11
GE                   : 66
GOTO                 : 38 41 46
GT                   : 65
ID                   : 6 7 8 9 10 11 13 14 24 25 31 32 40 43 44 50 51 77 78
IF                   : 36 37 38 39
INTEGER              : 18
INT_LITERAL          : 26 27 38 41 43 44 45 46 53 72
LE                   : 64
LOGICAL              : 20
LPAREN               : 8 9 10 11 25 32 36 37 38 39 50 71 77
LT                   : 63
MINUS                : 57 69
NE                   : 62
NL                   : 1 2
NOT                  : 70
OR                   : 68
PLUS                 : 56
POWER                : 60
PRINT                : 33 34
PROGRAM              : 6 7
READ                 : 35
REAL                 : 19
REAL_LITERAL         : 73
RETURN               : 48
RPAREN               : 8 9 10 11 25 32 36 37 38 39 50 71 77
SLASH                : 59
STAR                 : 33 34 35 58
STOP                 : 42 49
STRING_LITERAL       : 76
SUBROUTINE           : 8 9
THEN                 : 36 37
TRUE                 : 74
error                : 

Nonterminals, with rules where they appear

decl                 : 16
decl_list            : 6 7 8 9 10 11 16
dim_list             : 25 27
do_body              : 43 44
expr                 : 31 32 36 37 38 39 40 43 43 44 44 44 54 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 70 71
expr_list            : 32 33 35 50 55 77
inline_stmt          : 39
nls                  : 2 6 6 7 8 8 9 10 10 11 17 30 31 32 33 34 35 36 36 37 37 37 38 40 41 42 43 44 45 46 47 48 49 50 51
opt_label            : 31 32 33 34 35 36 37 38 39 43 44 46 47 48 49 50 51
param_list           : 8 9 10 11 14
program              : 0
stmt                 : 29
stmt_list            : 6 7 8 9 10 11 29 36 37 37 45
type_spec            : 10 11 17
unit                 : 4 5
unit_list            : 3 5
vardecl              : 22 23
vardecl_list         : 17 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (3) program -> . unit_list
    (4) unit_list -> . unit
    (5) unit_list -> . unit_list unit
    (6) unit -> . PROGRAM ID nls decl_list stmt_list END nls
    (7) unit -> . PROGRAM ID nls decl_list stmt_list END
    (8) unit -> . SUBROUTINE ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (9) unit -> . SUBROUTINE ID LPAREN param_list RPAREN nls decl_list stmt_list END
    (10) unit -> . type_spec FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (11) unit -> . type_spec FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END
    (18) type_spec -> . INTEGER
    (19) type_spec -> . REAL
    (20) type_spec -> . LOGICAL
    (21) type_spec -> . CHARACTER

    PROGRAM         shift and go to state 4
    SUBROUTINE      shift and go to state 5
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    LOGICAL         shift and go to state 9
    CHARACTER       shift and go to state 10

    program                        shift and go to state 1
    unit_list                      shift and go to state 2
    unit                           shift and go to state 3
    type_spec                      shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (3) program -> unit_list .
    (5) unit_list -> unit_list . unit
    (6) unit -> . PROGRAM ID nls decl_list stmt_list END nls
    (7) unit -> . PROGRAM ID nls decl_list stmt_list END
    (8) unit -> . SUBROUTINE ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (9) unit -> . SUBROUTINE ID LPAREN param_list RPAREN nls decl_list stmt_list END
    (10) unit -> . type_spec FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (11) unit -> . type_spec FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END
    (18) type_spec -> . INTEGER
    (19) type_spec -> . REAL
    (20) type_spec -> . LOGICAL
    (21) type_spec -> . CHARACTER

    $end            reduce using rule 3 (program -> unit_list .)
    PROGRAM         shift and go to state 4
    SUBROUTINE      shift and go to state 5
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    LOGICAL         shift and go to state 9
    CHARACTER       shift and go to state 10

    unit                           shift and go to state 11
    type_spec                      shift and go to state 6

state 3

    (4) unit_list -> unit .

    PROGRAM         reduce using rule 4 (unit_list -> unit .)
    SUBROUTINE      reduce using rule 4 (unit_list -> unit .)
    INTEGER         reduce using rule 4 (unit_list -> unit .)
    REAL            reduce using rule 4 (unit_list -> unit .)
    LOGICAL         reduce using rule 4 (unit_list -> unit .)
    CHARACTER       reduce using rule 4 (unit_list -> unit .)
    $end            reduce using rule 4 (unit_list -> unit .)


state 4

    (6) unit -> PROGRAM . ID nls decl_list stmt_list END nls
    (7) unit -> PROGRAM . ID nls decl_list stmt_list END

    ID              shift and go to state 12


state 5

    (8) unit -> SUBROUTINE . ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (9) unit -> SUBROUTINE . ID LPAREN param_list RPAREN nls decl_list stmt_list END

    ID              shift and go to state 13


state 6

    (10) unit -> type_spec . FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (11) unit -> type_spec . FUNCTION ID LPAREN param_list RPAREN nls decl_list stmt_list END

    FUNCTION        shift and go to state 14


state 7

    (18) type_spec -> INTEGER .

    FUNCTION        reduce using rule 18 (type_spec -> INTEGER .)
    ID              reduce using rule 18 (type_spec -> INTEGER .)


state 8

    (19) type_spec -> REAL .

    FUNCTION        reduce using rule 19 (type_spec -> REAL .)
    ID              reduce using rule 19 (type_spec -> REAL .)


state 9

    (20) type_spec -> LOGICAL .

    FUNCTION        reduce using rule 20 (type_spec -> LOGICAL .)
    ID              reduce using rule 20 (type_spec -> LOGICAL .)


state 10

    (21) type_spec -> CHARACTER .

    FUNCTION        reduce using rule 21 (type_spec -> CHARACTER .)
    ID              reduce using rule 21 (type_spec -> CHARACTER .)


state 11

    (5) unit_list -> unit_list unit .

    PROGRAM         reduce using rule 5 (unit_list -> unit_list unit .)
    SUBROUTINE      reduce using rule 5 (unit_list -> unit_list unit .)
    INTEGER         reduce using rule 5 (unit_list -> unit_list unit .)
    REAL            reduce using rule 5 (unit_list -> unit_list unit .)
    LOGICAL         reduce using rule 5 (unit_list -> unit_list unit .)
    CHARACTER       reduce using rule 5 (unit_list -> unit_list unit .)
    $end            reduce using rule 5 (unit_list -> unit_list unit .)


state 12

    (6) unit -> PROGRAM ID . nls decl_list stmt_list END nls
    (7) unit -> PROGRAM ID . nls decl_list stmt_list END
    (1) nls -> . NL
    (2) nls -> . nls NL

    NL              shift and go to state 16

    nls                            shift and go to state 15

state 13

    (8) unit -> SUBROUTINE ID . LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (9) unit -> SUBROUTINE ID . LPAREN param_list RPAREN nls decl_list stmt_list END

    LPAREN          shift and go to state 17


state 14

    (10) unit -> type_spec FUNCTION . ID LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (11) unit -> type_spec FUNCTION . ID LPAREN param_list RPAREN nls decl_list stmt_list END

    ID              shift and go to state 18


state 15

    (6) unit -> PROGRAM ID nls . decl_list stmt_list END nls
    (7) unit -> PROGRAM ID nls . decl_list stmt_list END
    (2) nls -> nls . NL
    (15) decl_list -> .
    (16) decl_list -> . decl_list decl

  ! shift/reduce conflict for NL resolved as shift
    NL              shift and go to state 20
    INTEGER         reduce using rule 15 (decl_list -> .)
    REAL            reduce using rule 15 (decl_list -> .)
    LOGICAL         reduce using rule 15 (decl_list -> .)
    CHARACTER       reduce using rule 15 (decl_list -> .)
    END             reduce using rule 15 (decl_list -> .)
    INT_LITERAL     reduce using rule 15 (decl_list -> .)
    ID              reduce using rule 15 (decl_list -> .)
    PRINT           reduce using rule 15 (decl_list -> .)
    READ            reduce using rule 15 (decl_list -> .)
    IF              reduce using rule 15 (decl_list -> .)
    DO              reduce using rule 15 (decl_list -> .)
    GOTO            reduce using rule 15 (decl_list -> .)
    CONTINUE        reduce using rule 15 (decl_list -> .)
    RETURN          reduce using rule 15 (decl_list -> .)
    STOP            reduce using rule 15 (decl_list -> .)
    CALL            reduce using rule 15 (decl_list -> .)

  ! NL              [ reduce using rule 15 (decl_list -> .) ]

    decl_list                      shift and go to state 19

state 16

    (1) nls -> NL .

    NL              reduce using rule 1 (nls -> NL .)
    INTEGER         reduce using rule 1 (nls -> NL .)
    REAL            reduce using rule 1 (nls -> NL .)
    LOGICAL         reduce using rule 1 (nls -> NL .)
    CHARACTER       reduce using rule 1 (nls -> NL .)
    END             reduce using rule 1 (nls -> NL .)
    INT_LITERAL     reduce using rule 1 (nls -> NL .)
    ID              reduce using rule 1 (nls -> NL .)
    PRINT           reduce using rule 1 (nls -> NL .)
    READ            reduce using rule 1 (nls -> NL .)
    IF              reduce using rule 1 (nls -> NL .)
    DO              reduce using rule 1 (nls -> NL .)
    GOTO            reduce using rule 1 (nls -> NL .)
    CONTINUE        reduce using rule 1 (nls -> NL .)
    RETURN          reduce using rule 1 (nls -> NL .)
    STOP            reduce using rule 1 (nls -> NL .)
    CALL            reduce using rule 1 (nls -> NL .)
    PROGRAM         reduce using rule 1 (nls -> NL .)
    SUBROUTINE      reduce using rule 1 (nls -> NL .)
    $end            reduce using rule 1 (nls -> NL .)
    ENDIF           reduce using rule 1 (nls -> NL .)
    ELSE            reduce using rule 1 (nls -> NL .)


state 17

    (8) unit -> SUBROUTINE ID LPAREN . param_list RPAREN nls decl_list stmt_list END nls
    (9) unit -> SUBROUTINE ID LPAREN . param_list RPAREN nls decl_list stmt_list END
    (12) param_list -> .
    (13) param_list -> . ID
    (14) param_list -> . param_list COMMA ID

    RPAREN          reduce using rule 12 (param_list -> .)
    COMMA           reduce using rule 12 (param_list -> .)
    ID              shift and go to state 21

    param_list                     shift and go to state 22

state 18

    (10) unit -> type_spec FUNCTION ID . LPAREN param_list RPAREN nls decl_list stmt_list END nls
    (11) unit -> type_spec FUNCTION ID . LPAREN param_list RPAREN nls decl_list stmt_list END

    LPAREN          shift and go to state 23


state 19

    (6) unit -> PROGRAM ID nls decl_list . stmt_list END nls
    (7) unit -> PROGRAM ID nls decl_list . stmt_list END
    (16) decl_list -> decl_list . decl
    (28) stmt_list -> .
    (29) stmt_list -> . stmt_list stmt
    (17) decl -> . type_spec vardecl_list nls
    (18) type_spec -> . INTEGER
    (19) type_spec -> . REAL
    (20) type_spec -> . LOGICAL
    (21) type_spec -> . CHARACTER

    END             reduce using rule 28 (stmt_list -> .)
    NL              reduce using rule 28 (stmt_list -> .)
    INT_LITERAL     reduce using rule 28 (stmt_list -> .)
    ID              reduce using rule 28 (stmt_list -> .)
    PRINT           reduce using rule 28 (stmt_list -> .)
    READ            reduce using rule 28 (stmt_list -> .)
    IF              reduce using rule 28 (stmt_list -> .)
    DO              reduce using rule 28 (stmt_list -> .)
    GOTO            reduce using rule 28 (stmt_list -> .)
    CONTINUE        reduce using rule 28 (stmt_list -> .)
    RETURN          reduce using rule 28 (stmt_list -> .)
    STOP            reduce using rule 28 (stmt_list -> .)
    CALL            reduce using rule 28 (stmt_list -> .)
    INTEGER         shift and go to state 7
    REAL            shift and go to state 8
    LOGICAL         shift and go to state 9
    CHARACTER       shift and go to state 10

    stmt_list                      shift and go to state 24
    decl                           shift and go to state 25
    type_spec                      shift and go to state 26

state 20

    (2) nls -> nls NL .

    NL              reduce using rule 2 (nls -> nls NL .)
    INTEGER         reduce using rule 2 (nls -> nls NL .)
    REAL            reduce using rule 2 (nls -> nls NL .)
    LOGICAL         reduce using rule 2 (nls -> nls NL .)
    CHARACTER       reduce using rule 2 (nls -> nls NL .)
    END             reduce using rule 2 (nls -> nls NL .)
    INT_LITERAL     reduce using rule 2 (nls -> nls NL .)
    ID              reduce using rule 2 (nls -> nls NL .)
    PRINT           reduce using rule 2 (nls -> nls NL .)
    READ            reduce using rule 2 (nls -> nls NL .)
    IF              reduce using rule 2 (nls -> nls NL .)
    DO              reduce using rule 2 (nls -> nls NL .)
    GOTO            reduce using rule 2 (nls -> nls NL .)
    CONTINUE        reduce using rule 2 (nls -> nls NL .)
    RETURN          reduce using rule 2 (nls -> nls NL .)
    STOP            reduce using rule 2 (nls -> nls NL .)
    CALL            reduce using rule 2 (nls -> nls NL .)
    PROGRAM         reduce using rule 2 (nls -> nls NL .)
    SUBROUTINE      reduce using rule 2 (nls -> nls NL .)
    $end            reduce using rule 2 (nls -> nls NL .)
    ENDIF           reduce using rule 2 (nls -> nls NL .)
    ELSE            reduce using rule 2 (nls -> nls NL .)


state 21

    (13) param_list -> ID .

    RPAREN          reduce using rule 13 (param_list -> ID .)
    COMMA           reduce using rule 13 (param_list -> ID .)


state 22

    (8) unit -> SUBROUTINE ID LPAREN param_list . RPAREN nls decl_list stmt_list END nls
    (9) unit -> SUBROUTINE ID LPAREN param_list . RPAREN nls decl_list stmt_list END
    (14) param_list -> param_list . COMMA ID

    RPAREN          shift and go to state 27
    COMMA           shift and go to state 28


state 23

    (10) unit -> type_spec FUNCTION ID LPAREN . param_list RPAREN nls decl_list stmt_list END nls
    (11) unit -> type_spec FUNCTION ID LPAREN . param_list RPAREN nls decl_list stmt_list END
    (12) param_list -> .
    (13) param_list -> . ID
    (14) param_list -> . param_list COMMA ID

    RPAREN          reduce using rule 12 (param_list -> .)
    COMMA           reduce using rule 12 (param_list -> .)
    ID              shift and go to state 21

    param_list                     shift and go to state 29

state 24

    (6) unit -> PROGRAM ID nls decl_list stmt_list . END nls
    (7) unit -> PROGRAM ID nls decl_list stmt_list . END
    (29) stmt_list -> stmt_list . stmt
    (30) stmt -> . nls
    (31) stmt -> . opt_label ID EQUALS expr nls
    (32) stmt -> . opt_label ID LPAREN expr_list RPAREN EQUALS expr nls
    (33) stmt -> . opt_label PRINT STAR COMMA expr_list nls
    (34) stmt -> . opt_label PRINT STAR nls
    (35) stmt -> . opt_label READ STAR COMMA expr_list nls
    (36) stmt -> . opt_label IF LPAREN expr RPAREN THEN nls stmt_list ENDIF nls
    (37) stmt -> . opt_label IF LPAREN expr RPAREN THEN nls stmt_list ELSE nls stmt_list ENDIF nls
    (38) stmt -> . opt_label IF LPAREN expr RPAREN GOTO INT_LITERAL nls
    (39) stmt -> . opt_label IF LPAREN expr RPAREN inline_stmt
    (43) stmt -> . opt_label DO INT_LITERAL ID EQUALS expr COMMA expr nls do_body
    (44) stmt -> . opt_label DO INT_LITERAL ID EQUALS expr COMMA expr COMMA expr nls do_body
    (46) stmt -> . opt_label GOTO INT_LITERAL nls
    (47) stmt -> . opt_label CONTINUE nls
    (48) stmt -> . opt_label RETURN nls
    (49) stmt -> . opt_label STOP nls
    (50) stmt -> . opt_label CALL ID LPAREN expr_list RPAREN nls
    (51) stmt -> . opt_label CALL ID nls
    (1) nls -> . NL
    (2) nls -> . nls NL
    (52) opt_label -> .
    (53) opt_label -> . INT_LITERAL
